--- a/_config.yml
+++ b/_config.yml
@@ -19,8 +19,8 @@ description: > # this means to ignore newlines until "baseurl:"
   这是我的技术博客，希望结交更多志同道合的人！！
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
-twitter_username: jekyllrb
-github_username:  jekyll
+#twitter_username: jekyllrb
+github_username:  kwy126
 
 # Build settings
 markdown: kramdown
