--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-# Welcome to Jekyll!
+ Welcome to Jekyll!
 #
 # This config file is meant for settings that affect your whole blog, values
 # which you are expected to set up once and rarely edit after that. If you find
@@ -23,7 +23,8 @@ url: "" # the base hostname & protocol for your site, e.g. http://example.com
 github_username:  kwy126
 
 # Build settings
-markdown: kramdown
+#markdown: kramdown
+markdown: RDiscount
 theme: minima
 gems:
   - jekyll-feed
