修改编码方式
Signed-off-by: kwy126 <kewy126@126.com>

--- a/_config.yml
+++ b/_config.yml
@@ -25,7 +25,7 @@ github_username:  kwy126
 # Build settings
 #markdown: kramdown
 markdown: RDiscount
-encoding: UTF-8
+encoding: ENCODING
 theme: minima
 gems:
   - jekyll-feed
