--- a/_config.yml.back.yml
+++ b/_config.yml.back.yml
@@ -1,4 +1,4 @@
-# Welcome to Jekyll!
+ Welcome to Jekyll!
 #
 # This config file is meant for settings that affect your whole blog, values
 # which you are expected to set up once and rarely edit after that. If you find
@@ -16,13 +16,15 @@
 title: 末路狂奔在路上
 email: kewy126@126.com
 description: > # this means to ignore newlines until "baseurl:"
+  这是我的技术博客，希望结交更多志同道合的人！！
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 #twitter_username: jekyllrb
-#github_username:  jekyll
+github_username:  kwy126
 
 # Build settings
 markdown: kramdown
+
 theme: minima
 gems:
   - jekyll-feed
